--- a/LoveYouALatte/Views/Home/Index.cshtml
+++ b/LoveYouALatte/Views/Home/Index.cshtml
@@ -6,4 +6,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <h2>Hello World</h2>
+    <form method="post" action"">
+        <input type="submit" value="Log Time">
+    </form>
 </div>
