--- a/LoveYouALatte/Views/Home/ContactUs.cshtml
+++ b/LoveYouALatte/Views/Home/ContactUs.cshtml
@@ -3,4 +3,137 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Contact Us page</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 1.5em;
+        }
+
+        .inner-main-menu {
+            margin: 0 auto;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        .container {
+            background: url(images/stairs.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        input[type=text], select, textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-top: 6px;
+            margin-bottom: 16px;
+            resize: vertical;
+        }
+
+        input[type=submit] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+            input[type=submit]:hover {
+                background-color: #45a049;
+            }
+
+        .container {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+
+        .inner-main-menu ul {
+            margin: 0;
+            padding: 35px 0 0;
+            list-style: none;
+            text-align: right;
+        }
+
+            .inner-main-menu ul li {
+                float: none;
+                display: inline-block;
+            }
+
+                .inner-main-menu ul li:nth-child(1) {
+                    float: left;
+                }
+
+                .inner-main-menu ul li:nth-child(2) {
+                    float: left;
+                }
+
+                .inner-main-menu ul li a {
+                    color: black;
+                    font-size: 20px;
+                    text-transform: uppercase;
+                    text-decoration: none;
+                    display: block;
+                    padding: 10px 20px;
+                }
+
+                    .inner-main-menu ul li a:hover {
+                        color: rgb(211, 89, 89);
+                    }
+
+        #main-menu {
+            width: 100%;
+            position: relative;
+        }
+
+        .logo-area {
+            width: 300px;
+            height: 300px;
+            position: absolute;
+            left: 50%;
+            top: 0;
+            content: "";
+            margin-left: -150px;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+        }
+    </style>
+</head>
+    <body>
+            <div class="container">
+                <Form Action="http://webdevbasics.net/scripts/demo.php" method="Post">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                    <label for="subject">Comment</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+                    <input type="submit" value="Submit">
+                </Form>
+            </div>
+            <h1> Love you a Latte</h1>
+            <p>1234 long street, Dublin, OH, 43017</p>
+            <p>phone# (614)999-8888 </p>
+            <p>teamorange@orangeteam.edu</p>
+
+     </body>
+ </html>
+
