--- a/LoveYouALatte/Views/Home/FAQ.cshtml
+++ b/LoveYouALatte/Views/Home/FAQ.cshtml
@@ -1,6 +1,74 @@
 ﻿@{
     ViewData["Title"] = "FAQ";
 }
+<head>
 <h1>@ViewData["Title"]</h1>
 
 <p>FAQ page</p>
+
+<h2>About Love You A Latte!</h2>
+
+<p>The world's first and leading Vegan Non-GMO Gluten Free coffee.</p>
+
+<style>
+    .accordion {
+        background-color: #eee;
+        color: #444;
+        cursor: pointer;
+        padding: 18px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+        transition: 0.4s;
+    }
+
+        .active, .accordion:hover {
+            background-color: #ccc;
+        }
+
+    .panel {
+        padding: 0 18px;
+        display: none;
+        background-color: white;
+        overflow: hidden;
+    }
+</style>
+</head>
+<body>
+
+    <h2>What makes our latte THEE latte</h2>
+
+    <button class="accordion">Our Goal</button>
+    <div class="panel">
+        <p>Our mission at Love You A Latte besides loving customers A Latte is to provide a sustainable and a healthy alternative for coffee with our proprietary blend that not only will make customers feel better but also our world!</p>
+    </div>
+
+    <button class="accordion">Decaf and Cold Brews</button>
+    <div class="panel">
+        <p>We have cold brews and Decaf coffee just ask you're barista and they will be more than happy to accomodate your request</p>
+    </div>
+
+    <button class="accordion">Our Values</button>
+    <div class="panel">
+        <p>Here at Love You A Latte we have deep values on tegridy. We believe without co-operation with tegridy farms we wouldn't have integrity.</p>
+    </div>
+
+    <script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var panel = this.nextElementSibling;
+    if (panel.style.display === "block") {
+      panel.style.display = "none";
+    } else {
+      panel.style.display = "block";
+    }
+  });
+}
+    </script>
+    </body>
