--- a/LoveYouALatte/Views/Home/HomePage.cshtml
+++ b/LoveYouALatte/Views/Home/HomePage.cshtml
@@ -14,7 +14,7 @@
 <div class="row">
 
     <div class="col-md-6">
-        <img class="images" src="~/images/1-latte-art-dragon (1)-400.jpg" alt="Dragon Coffee">
+        <img class="images" src="~/images/latte-art-dragon-400.jpg" alt="Dragon Coffee">
     </div>
 
     <div class="col-md-6">
@@ -37,7 +37,7 @@
     </div>
 
     <div class="col-md-6">
-        <img class="images" src="~/images/Iced-Coffee-11-400.jpg" alt="Iced Coffee">
+        <img class="images" src="~/images/Iced-Coffee-400.jpg" alt="Iced Coffee">
     </div>
 
 </div>
