added filed to iamge folder and removed a line from menu page

--- a/LoveYouALatte/Views/Home/Menu.cshtml
+++ b/LoveYouALatte/Views/Home/Menu.cshtml
@@ -6,7 +6,7 @@
 <p>Menu page</p>
 
 <div class="card-group">
-        <div class="card" style="width:18rem;">
+        <div class="card">
             <img class="card-img-top" src="~/Images/BrewedCoffee.jpg" alt="Brewed Coffee" />
             <div class="card-body">
                 <h5 class="card-text">Brewed Coffee &emsp; $4.00</h5>
@@ -16,8 +16,7 @@
                 <button class="btn btn-primary">Large<i class="fas fa-coffee fa-lg"></i></button>
             </div>
         </div>
-    @*<div class="col-3">*@
-        <div class="card" style="width:18rem;">
+        <div class="card">
             <img class="card-img-top" src="~/Images/Cappuccino.jpg" alt="Brewed Coffee" />
             <div class="card-body">
                 <h5 class="card-text">Cappuccino &emsp; $5.00</h5>
@@ -27,9 +26,7 @@
                 <button class="btn btn-primary">Large<i class="fas fa-coffee fa-lg"></i></button>
             </div>
         </div>
-    @*</div>*@
-    @*<div class="col-3">*@
-        <div class="card" style="width:18rem;">
+        <div class="card">
             <img class="card-img-top" src="~/Images/Latte.jpg" alt="Brewed Coffee" />
             <div class="card-body">
                 <h5 class="card-text">Latte &emsp; $5.00</h5>
@@ -39,10 +36,7 @@
                 <button class="btn btn-primary">Large<i class="fas fa-coffee fa-lg"></i></button>
             </div>
         </div>
-    @*</div>*@
-
-    @*<div class="col-3">*@
-        <div class="card" style="width:18rem;">
+        <div class="card">
             <img class="card-img-top" src="~/Images/Espresso.jpg" alt="Brewed Coffee" />
             <div class="card-body">
                 <h5 class="card-text">Espresso &emsp; $2.00</h5>
@@ -52,5 +46,4 @@
                 <button class="btn btn-primary">Large<i class="fas fa-coffee fa-lg"></i></button>
             </div>
         </div>
-    @*</div>*@
 </div>
