--- a/LoveYouALatte/Views/Home/HomePage.cshtml
+++ b/LoveYouALatte/Views/Home/HomePage.cshtml
@@ -34,6 +34,8 @@
         <h4 class="copy">
             Share your experience at Love you a latte with our hashtag. #LoveALatte #LYAL on social
         </h4>
+
+        <i class="fa fa-coffee" aria-hidden="true"></i>
     </div>
 
     <div class="col-md-6">
