--- a/LoveYouALatte/Views/Home/Menu.cshtml
+++ b/LoveYouALatte/Views/Home/Menu.cshtml
@@ -11,9 +11,10 @@
             <div class="card-body">
                 <h5 class="card-text">Brewed Coffee &emsp; $4.00</h5>
                 <p class="card-text">Our twist on the classic brewed coffee. Made with love.</p>
-                <button class="btn btn-primary">Small<i class="fas fa-coffee fa-sm"></i></button>
-                <button class="btn btn-primary">Medium<i class="fas fa-coffee"></i></button>
-                <button class="btn btn-primary">Large<i class="fas fa-coffee fa-lg"></i></button>
+                <button class="btn btn-primary">Small <i class="fa fa-coffee fa-sm"></i></button>
+                <button class="btn btn-primary">Medium <i class="fa fa-coffee"></i></button>
+                <button class="btn btn-primary">Large <i class="fa fa-coffee fa-lg"></i></button>
+                
             </div>
         </div>
         <div class="card">
@@ -21,9 +22,9 @@
             <div class="card-body">
                 <h5 class="card-text">Cappuccino &emsp; $5.00</h5>
                 <p class="card-text">Another classic, the cappuccino. Request fancy cappuccino art and our barristas will try their best to make it happen. Made with love.</p>
-                <button class="btn btn-primary">Small<i class="fas fa-coffee fa-sm"></i></button>
-                <button class="btn btn-primary">Medium<i class="fas fa-coffee"></i></button>
-                <button class="btn btn-primary">Large<i class="fas fa-coffee fa-lg"></i></button>
+                <button class="btn btn-primary">Small <i class="fa fa-coffee fa-sm"></i></button>
+                <button class="btn btn-primary">Medium <i class="fa fa-coffee"></i></button>
+                <button class="btn btn-primary">Large <i class="fa fa-coffee fa-lg"></i></button>
             </div>
         </div>
         <div class="card">
@@ -31,9 +32,9 @@
             <div class="card-body">
                 <h5 class="card-text">Latte &emsp; $5.00</h5>
                 <p class="card-text">Our signature drink and perfect for a cold day. Also available in pumpkin spice. Made with love.</p>
-                <button class="btn btn-primary">Small<i class="fas fa-coffee fa-sm"></i></button>
-                <button class="btn btn-primary">Medium<i class="fas fa-coffee"></i></button>
-                <button class="btn btn-primary">Large<i class="fas fa-coffee fa-lg"></i></button>
+                <button class="btn btn-primary">Small <i class="fa fa-coffee fa-sm"></i></button>
+                <button class="btn btn-primary">Medium <i class="fa fa-coffee"></i></button>
+                <button class="btn btn-primary">Large <i class="fa fa-coffee fa-lg"></i></button>
             </div>
         </div>
         <div class="card">
@@ -41,9 +42,9 @@
             <div class="card-body">
                 <h5 class="card-text">Espresso &emsp; $2.00</h5>
                 <p class="card-text">For when a cup of joe isn't enough. Pronounced with an 's' not an 'x'. Made with love.</p>
-                <button class="btn btn-primary">Small<i class="fas fa-coffee fa-sm"></i></button>
-                <button class="btn btn-primary">Medium<i class="fas fa-coffee"></i></button>
-                <button class="btn btn-primary">Large<i class="fas fa-coffee fa-lg"></i></button>
+                <button class="btn btn-primary">Small <i class="fa fa-coffee fa-sm"></i></button>
+                <button class="btn btn-primary">Medium <i class="fa fa-coffee"></i></button>
+                <button class="btn btn-primary">Large <i class="fa fa-coffee fa-lg"></i></button>
             </div>
         </div>
 </div>
