--- a/LoveYouALatte/Views/Shared/_HomePageLayout.cshtml
+++ b/LoveYouALatte/Views/Shared/_HomePageLayout.cshtml
@@ -6,52 +6,35 @@
     <title>@ViewData["Title"] - LoveYouALatte</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/HomePage.css" />
+    <link rel="stylesheet" href="~/css/Site.css" />
+
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LoveYouALatte</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Index</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HomePage">Home Page</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
-                        </li>
-                        <li class="nav-item">
-                            <img src="~/images/LYAL_Logo_100.jpg"  alt="LYAL Logo">
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Menu">Menu</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+<body class="home-background background-layer">
+    <div class="myNavbar">
+            <a asp-area="" asp-controller="Home" asp-action="Index">Index</a>
+
+            <a asp-area="" asp-controller="Home" asp-action="HomePage">Home Page</a>
+
+            <a  asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
+
+            <a><img src="~/images/LYAL_Logo_100.jpg" alt="LYAL Logo" style="width: 20px;"></a>
+
+            <a asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+
+            <a asp-area="" asp-controller="Home" asp-action="Menu">Menu</a>
+
+    </div>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @*<footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - LoveYouALatte - <a asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
         </div>
-    </footer>
+    </footer>*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
