--- a/LoveYouALatte/wwwroot/css/HomePage.css
+++ b/LoveYouALatte/wwwroot/css/HomePage.css
@@ -64,6 +64,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    color: white;
 }
 h1 {
     text-align: center;
@@ -103,3 +104,20 @@ h1 {
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
 }
+
+.home-background{
+    background: url('../Images/coffee with leaves.jpg') no-repeat center center fixed;
+    background-size: cover;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
+}
+
+.background-layer {
+    background-color: rgba(248, 247, 216, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
