--- a/LoveYouALatte/Views/Home/FAQ.cshtml
+++ b/LoveYouALatte/Views/Home/FAQ.cshtml
@@ -40,9 +40,9 @@
 
     <h2>What makes our latte THEE latte</h2>
 
-    <button class="accordion">Our Goal</button>
+    <button class="accordion">Our Story</button>
     <div class="panel">
-        <p>Our mission at Love You A Latte besides loving customers A Latte is to provide a sustainable and a healthy alternative for coffee with our proprietary blend that not only will make customers feel better but also our world!</p>
+        <p>Our first store was started with a mission to spread 'A Latte' of love by providing an inexpensive, sustainable and healthy alternative for coffee with our proprietary blend that not only will make customers feel better but also our world!</p>
     </div>
 
     <button class="accordion">Decaf and Cold Brews</button>
