Created cart page and harcoded a sample table

--- a/LoveYouALatte/Views/Shared/_HomePageLayout.cshtml
+++ b/LoveYouALatte/Views/Shared/_HomePageLayout.cshtml
@@ -11,17 +11,20 @@
 </head>
 <body class="home-background background-layer">
     <div class="myNavbar">
-            <a asp-area="" asp-controller="Home" asp-action="Index">Index</a>
+        <a asp-area="" asp-controller="Home" asp-action="HomePage">Home Page</a>
 
-            <a asp-area="" asp-controller="Home" asp-action="HomePage">Home Page</a>
+        <a asp-area="" asp-controller="Home" asp-action="Index">Index</a>
 
-            <a  asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
+        <a asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
 
-            <a><img src="~/images/LYAL_Logo_100.jpg" alt="LYAL Logo" style="width: 20px;"></a>
+        @*<a><img src="~/images/LYAL_Logo_100.jpg" alt="LYAL Logo" style="width: 20px;"></a>*@
 
-            <a asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+        <a asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
 
-            <a asp-area="" asp-controller="Home" asp-action="Menu">Menu</a>
+        <a asp-area="" asp-controller="Home" asp-action="Menu">Menu</a>
+
+        <a asp-area="" asp-controller="Home" asp-action="Checkout"><i class="fa fa-shopping-cart"></i></a>
+
 
     </div>
     <div class="container">
